aKregator ChangeLog
===================
(c) 2004 the aKregator authors.

Changes after 1.0b4:
-----------------------------

Bug Fixes:
#81995 - Don't crash when changing from/to combined view when folder selected -tpr
#82024 - Fix drag&drop regression which made it possible have multiple top level folders -sg

Changes after 1.0b3:
-----------------------------

New Features:
#82023 - Added middle mouse button option to open tabs in background -tpr
#83202 - "Clear" button for search string -berkus
       - Per feed interval fetching -smt
       - Konqueror plugin for adding feeds to aKregator from context menu -PhantomsDad
       - Command line options for adding feeds -PhantomsDad
       - In case the feed doesn't provide an article <link> element, fall back to the <guid> permaLink -sg
       
Bug Fixes:
       - Update interval spinbox should be disabled if the checkbox isn't checked -tpr
       - "aKregator - 0 unread" -> "aKregator - No unread articles" -tpr
       - Scroll up when changing the article in article viewer -tpr
       - Various frame-switching bug fixes -smt
       - Fix favicon loading crash (#82682) -smt 
       - Various stop-button related bug fixes -smt
       - Changed "Copy Link Location" to "Copy Link Address" because of the new naming standard of KDE -tpr
       - Fix archiving of article <guid> elements -sg

Changes after 1.0b2:
-----------------------------

New Features:

       - Configuration dialog added -tpr
       - Kontact plugin added -smt
       - Ability to mark all entries as read on exit -tpr
       - Ability to change middle mouse button behaviour in browser -tpr
       - Ability to specify external browser (KDE default or custom command) -PhantomsDad
       - Fetch all feeds every <num> minutes -tpr
       - Display unread count in the tooltip of the tray icon -tpr

Bug Fixes:

#82618 - Don't crash if there's no kpart available -tpr
#82691 - Don't minimize but close aKregator when session is shutting down -tpr